; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/fsck_ffs/extr_suj.c_blk_isfree.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/fsck_ffs/extr_suj.c_blk_isfree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.suj_cg = type { i32 }

@fs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @blk_isfree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @blk_isfree(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.suj_cg*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @fs, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @dtog(i32 %4, i32 %5)
  %7 = call %struct.suj_cg* @cg_lookup(i32 %6)
  store %struct.suj_cg* %7, %struct.suj_cg** %3, align 8
  %8 = load i32, i32* @fs, align 4
  %9 = load %struct.suj_cg*, %struct.suj_cg** %3, align 8
  %10 = getelementptr inbounds %struct.suj_cg, %struct.suj_cg* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @cg_blksfree(i32 %11)
  %13 = load i32, i32* @fs, align 4
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @dtogd(i32 %13, i32 %14)
  %16 = call i32 @ffs_isblock(i32 %8, i32 %12, i32 %15)
  ret i32 %16
}

declare dso_local %struct.suj_cg* @cg_lookup(i32) #1

declare dso_local i32 @dtog(i32, i32) #1

declare dso_local i32 @ffs_isblock(i32, i32, i32) #1

declare dso_local i32 @cg_blksfree(i32) #1

declare dso_local i32 @dtogd(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
